k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-platformer-service
spec:
  selector:
    app: bird-platformer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
